@@ -20,6 +20,7 @@ on develop => sub {
     requires 'App::githook::perltidy';
     requires 'OptArgs2';
     requires 'Text::Diff';
+    requires 'Text::Table::Tiny';
 };
 
 on test => sub {
